--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 
 
 <!--<input class="btn-danger" type="button" value="Start Here" (click)="OnButtonClick()" style="width: 100px; height: 50px;" >-->
-<button class="btn btn-primary" type="button" value="Start Here " routerLink="/Welcome Page" style="width: 100px; height: 50px;"  >Start Here</button>
+<button class="btn btn-primary" type="button" value="Start Here " (click)="OnButtonClick()" style="width: 100px; height: 50px; cursor: pointer"  >Start Here</button>
 
 
 
