--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -1,4 +1,9 @@
-h1{
-  color:darkred;
+.todo-list li, .new-todo {
+  font-size: 12px;
+}
 
+.todoapp h1 {
+  color: dodgerblue;
+  font-size: 40px;
+  top: -130px;
 }
