--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
   <header class="header">
-    <h1>Tasks</h1>
-    <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
+    <h1>Recommended Tasks</h1>
+    <input class="new-todo" placeholder="Want to add more ? Write here..." autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
   </header>
   <section class="main" *ngIf="todos.length > 0">
     <ul class="todo-list">
