Final changes to Task Recommender

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">
   <div class="row">
     <div class="col-lg-4">
       <ul class="nav nav-tabs">
@@ -8,23 +8,10 @@
       </ul>
     </div>
   </div>
-
-</div>
+</div>-->
 
 <div class="row">
   <div class="col-xs-12 col-md-8 col-md-offset-2">
-    <!--  <app-active-users></app-active-users>
-   <app-inactive-users></app-inactive-users>!-->
-
-
     <router-outlet></router-outlet>
-
   </div>
 </div>
-
-
-
-
-<!--
-
--->
