--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
-<h1>Welcome to the Fitness Club</h1>
-<img width="500px" src="\assets\image\fitness.jpg">
-<br>
-
+<div class="homePage">
+  <h1>Welcome to the Fitness Club</h1>
+  <img width="800px" src="../../assets/image/fitness.jpg">
+  <br>
+</div>
 
 <!--<input class="btn-danger" type="button" value="Start Here" (click)="OnButtonClick()" style="width: 100px; height: 50px;" >-->
-<button class="btn btn-primary" type="button" value="Start Here " (click)="OnButtonClick()" style="width: 100px; height: 50px; cursor: pointer"  >Start Here</button>
+<button class="btn btn-primary startBtn" type="button" value="Start Here " (click)="OnButtonClick()">Start Here</button>
 
 
 
